# intellipatch

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/raw_trivy_scans/: nginx_1.18.json  node_14-slim.json  python_3.9-slim.json  redis_6.0.json  ubuntu_20.04.json
models/: metrics.json  ranking_model.joblib
observability/: prometheus.yml
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/dashboards/json/: intellipatch.json
scripts/: architecture_diagram.py
src/intellipatch/: config.py  gate.py  migrate.py
src/intellipatch/models/: schemas.py
src/intellipatch/ranking/: dataset.py  features.py  label.py  ranker.py  train.py
src/intellipatch/remediation/: llm.py  report.py
src/intellipatch/scanning/: trivy.py
src/intellipatch/services/api/: main.py
src/intellipatch/storage/: db.py  orm.py  repository.py
tests/: conftest.py  test_api.py  test_cvss.py  test_dataset.py  test_features.py  test_gate.py  test_label.py  test_ranker.py  test_remediation.py  test_repository.py  test_trivy_parser.py
